# kolmogorov

./: .gitignore  LICENSE.txt  README.md  chaitin.ml  dune-project  levenshtein.ml  shannon.ml  thorngate.ml
lib/: dune  geoffroy.ml  geoffroy.mli  jacquard.ml  jacquard.mli  ministry.ml  ministry.mli
spa/: thorngate.ml  thorngate.mli  whodunit.ml
test/: dune  geoffroy_elemental.expected  geoffroy_foxhounds.expected  geoffroy_grouper.expected  geoffroy_marshaled.expected  geoffroy_selections.expected  jacquard_amalthean.expected  jacquard_cornucopia.expected  jacquard_dumpster.expected  jacquard_gearbox.expected  jacquard_juxtapose.expected  jacquard_machine.expected  jacquard_separate.expected  kolmogorov.expected  kolmogorov.ml  ministry_cornucopia.expected  ministry_juxtapose.expected  ministry_tutorial.expected  portico.expected  portico_atrium.expected
