(test
 (name kolmogorov))

;; test_geoffroy
(rule
 (with-stdout-to geoffroy_elemental.output
  (run stoa :metals)))

(rule
 (alias runtest)
 (action
  (diff geoffroy_elemental.expected geoffroy_elemental.output)))

(rule
 (with-stdout-to geoffroy_grouper.output
  (run stoa :find FeNp FePu)))

(rule
 (alias runtest)
 (action
  (diff geoffroy_grouper.expected geoffroy_grouper.output)))

(rule
 (with-stdout-to geoffroy_foxhounds.output
  (run stoa :keys)))

(rule
 (alias runtest)
 (action
  (diff geoffroy_foxhounds.expected geoffroy_foxhounds.output)))

(rule
 (with-stdout-to geoffroy_marshaled.output
  (run stoa :mars)))

(rule
 (alias runtest)
 (action
  (diff geoffroy_marshaled.expected geoffroy_marshaled.output)))

(rule
 (with-stdout-to geoffroy_selections.output
  (run stoa)))

(rule
 (alias runtest)
 (action
  (diff geoffroy_selections.expected geoffroy_selections.output)))

;; test_jacquard
(rule
 (with-stdout-to jacquard_machine.output
  (run stoa n0)))

(rule
 (alias runtest)
 (action
  (diff jacquard_machine.expected jacquard_machine.output)))

(rule
 (with-stdout-to jacquard_juxtapose.output
  (run stoa n0 k9 j3)))

(rule
 (alias runtest)
 (action
  (diff jacquard_juxtapose.expected jacquard_juxtapose.output)))

(rule
 (with-stdout-to jacquard_gearbox.output
  (run stoa n0 j23 :fkbjdn)))

(rule
 (alias runtest)
 (action
  (diff jacquard_gearbox.expected jacquard_gearbox.output)))

(rule
 (with-stdout-to jacquard_cornucopia.output
  (run stoa :all)))

(rule
 (alias runtest)
 (action
  (diff jacquard_cornucopia.expected jacquard_cornucopia.output)))

(rule
 (with-stdout-to jacquard_dumpster.output
  (run stoa :dump)))

(rule
 (alias runtest)
 (action
  (diff jacquard_dumpster.expected jacquard_dumpster.output)))

;; test_ministry
(rule
 (with-stdout-to ministry_tutorial.output
  (run stoa :help)))

(rule
 (alias runtest)
 (action
  (diff ministry_tutorial.expected ministry_tutorial.output)))

;; test_portico
(rule
 (with-stdout-to portico_atrium.output
  (run stoa)))

(rule
 (alias runtest)
 (action (diff portico_atrium.expected portico_atrium.output)))

